title field is now rich html element
+ version management counter
+ fixed box-sizing difference between input and button

--- a/todo.txt
+++ b/todo.txt
@@ -2,10 +2,8 @@
 14. connect with auto responder
 17. compress with (if available): https://developers.google.com/closure/compiler/docs/api-ref
 18. release files should be on a separate subdomain cached on cloudflare and purged individually after each save.
+19. title text should be html textarea
+20. title font color should be configurable.
 
 BUGS:
-1.  oppositeDirection : 'on' ==>  oppositeDirection : true
-2. why show labels true although selected as false
 3. fix font issues at soda stream
-4. onsuccess code is not saved in options file
-5. title font color should be editable.
